<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:layout="@layout/preference_main_card" android:title="@string/category_general" android:key="settings_home_general" android:summary="@string/category_general_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.GeneralPreferencesFragment" app:icon="@drawable/ic_settings"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/category_roms" android:key="settings_home_roms" android:summary="@string/category_roms_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.RomsPreferencesFragment" app:icon="@drawable/ic_folder"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/category_save_files" android:key="settings_home_save_files" android:summary="@string/category_save_files_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.SaveFilesPreferencesFragment" app:icon="@drawable/ic_file"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/category_system" android:key="settings_home_system" android:summary="@string/category_system_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.SystemPreferencesFragment" app:icon="@drawable/ic_firmware"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/category_video" android:key="settings_home_video" android:summary="@string/category_video_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.VideoPreferencesFragment" app:icon="@drawable/ic_video"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/category_audio" android:key="settings_home_audio" android:summary="@string/category_audio_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.AudioPreferencesFragment" app:icon="@drawable/ic_audio"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/input" android:key="settings_home_input" android:summary="@string/input_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.InputPreferencesFragment" app:icon="@drawable/ic_input"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/retroachievements" android:key="settings_home_retroachievements" android:summary="@string/retroachievements_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.RetroAchievementsPreferencesFragment" app:icon="@drawable/ic_trophy"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/cheats" android:key="settings_home_cheats" android:summary="@string/cheats_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.CheatsPreferencesFragment" app:icon="@drawable/ic_cheat"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/category_translator" android:key="settings_home_translator" android:summary="@string/category_translator_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.TranslatorPreferencesFragment" app:icon="@drawable/ic_translate"/>
    <Preference android:layout="@layout/preference_main_card" android:title="@string/about_app_title" android:key="settings_home_about" android:summary="@string/about_app_summary" android:fragment="me.magnum.melonds.ui.settings.fragments.AboutPreferencesFragment" app:icon="@drawable/ic_info"/>
</PreferenceScreen>
